tests/fixtures/invalid/pow_list_none_bool.py
# Cannot call pow() with List[int], None, Bool
x = pow([1, 2, 3], None, True)
